# hpx_playgrounds

./: README.md
2d_lattice/: 2d_system.hpp  CMakeLists.txt  dataflow_shared_algebra.hpp  dataflow_shared_operations.hpp  dataflow_shared_resize.hpp  hpx_odeint_actions.hpp  perf2d.cpp  perf2d_single.cpp  serialization.hpp  spreading_observer.hpp  test2d.cpp
2d_lattice/local_dataflow/: 2d_system.hpp  CMakeLists.txt  const_test.cpp  initialize.hpp  local_dataflow_algebra.hpp  local_dataflow_shared_operations.hpp  local_dataflow_shared_resize.hpp  perf2d.cpp  perf2d_single.cpp  test2d.cpp  test_const_functor.cpp  test_local_dataflow.cpp  test_shared_dataflow.cpp  test_swap.cpp
2d_lattice/openmp/: Makefile  lattice2d.hpp  nested_range_algebra_omp.hpp  perf_2d_omp.cpp  perf_2d_omp_single.cpp  resize.hpp  spreading_observer.hpp  test2d_omp.cpp
dataflow/: CMakeLists.txt  euler.hpp  harm_osc.cpp
mixed_linear_nonlinear/: CMakeLists.txt  mixed_system.hpp  mixed_toda_nl_system.hpp  transmission.cpp
odeint/: CMakeLists.txt  component_test.cpp  dataflow_algebra.hpp  dataflow_operations.cpp  dataflow_operations.hpp  odeint_dataflow_test.cpp  op.cpp  op.hpp  subspace_test.cpp  uncou_perf_test.cpp
odeint_shared/: CMakeLists.txt  coupled_oscillators.cpp  coupled_oscillators_perf.cpp  dataflow_shared_algebra.hpp  dataflow_shared_operations.cpp  dataflow_shared_operations.hpp  dataflow_shared_operations_global.hpp  dataflow_shared_resize.hpp  hpx_odeint_actions.hpp  serialization.hpp  test.cpp  test_shared_dataflow.cpp
parallel_steppers/: CMakeLists.txt  dataflow_algebra.hpp  dataflow_array_algebra.hpp  dataflow_array_copy.hpp  dataflow_copy.hpp  dataflow_operations.hpp  dataflow_shared_algebra.hpp  dataflow_shared_copy.hpp  dataflow_shared_operations.hpp  dataflow_shared_resize.hpp  dataflow_shared_wrapper.hpp  dataflow_wrapper.hpp  identity_action.hpp  pab_perf.cpp  pab_perf_plain.cpp  phase_chain.cpp  phase_chain_plain.cpp  serialization.hpp  test.cpp  test_hpx_limit.cpp
transform/: CMakeLists.txt  transform.hpp  transform_test.cpp
